All page has been ready to review

--- a/career.html
+++ b/career.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
@@ -20,9 +20,9 @@
 
 <body>
     <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -36,12 +36,14 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="team-header">
+    <section class="career-header px-3">
 
-        <nav class=" navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -58,139 +60,144 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
-                    <p class="text-white fw-bold">Senior team</p>
+                    <p class="text-white fw-bold">Career</p>
                     <h2 class="header-content-heading text-light-blue fw-bold mb-4">
-                        Pullquote from the page
-                        <br class="d-xs-block d-md-none" />
-                        can go in this space
-                        <br class="d-xs-none d-md-block" />
-                        here.
+                        Passionate about IT?
+                        <br />
+                        Come and work for us.
                     </h2>
                 </div>
             </div>
         </div>
     </section>
     <!-- Section Header end  -->
-    <!-- Section team card  -->
-    <section class="py-4 py-md-5 px-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <div class="card border-0">
-                        <img src="./assets/Team portraits/Andrew_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Andrew Geidans</h5>
-                            <p class="card-text text-blue">
-                                Founder and MD,
-                                <br>
-                                Technical Consultant
-                            </p>
-                            <a href="#" class="btn">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card border-0 position-relative">
-                        <img src="./assets/Team portraits/Jana_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-image-top-over"></div>
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Jana Zaragotska</h5>
-                            <p class="card-text text-blue">
-                                Operations Director
-                            </p>
-                            <a href="#" class="btn">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-4">
-                    <div class="card border-0">
-                        <img src="./assets/Team portraits/Pavel_portrait.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-blue fw-bold">Pavel Maksimov</h5>
-                            <p class="card-text text-blue">
-                                Technical Director
-                            </p>
-                            <a href="#" class="btn">
-                                <span style="border-radius: 20px;" class="bg-dark-blue text-white px-2 py-1">
-                                    <i class="fab fa-linkedin-in"></i>
-                                </span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Section Team end  -->
-    <!-- Section Review start -->
-    <section class="py-4 py-md-5 px-3 bg-orange">
-        <div class="container">
-            <div class="section-header d-flex align-items-top">
-                <h2 class="ms-md-3 fw-bold text-white">
-                    <span class="left-quote">"</span>
-                    GS ynderstood our challenges
-                    straight away"
-                </h2>
-            </div>
-            <p class="text-blue fw-normal">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
-                excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
-                similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
-                Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
-                deleniti! Lorem ipsum dolor
-            <div class="d-flex mb-3">
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
-            </div>
-            <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
-        </div>
-    </section>
-    <!-- Section Review end -->
 
-    <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
-        <div class="container">
+    <!-- Main card section start  -->
+    <section class="py-4 py-lg-5 px-3">
+        <div class="container p-0">
             <div class="row">
-                <div class="col-md-7">
-                    <p class="text-blue">
-                        Want to work better, grow faster and compete on a bigger playing field?
+                <div class="col-12 col-lg-8">
+                    <h2 class="text-orange fw-bolder mb-4">
+                        Porem ipsum dolor sit amet consectetur adipisicing elit. Ducimus impedit itaque ad.
+                    </h2>
+                    <p class="text-blue mb-4">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit rerum officia ea, modi voluptas
+                        totam illum cum cumque temporibus dolores repudiandae labore recusandae, harum ipsum dolorem,
+                        repellat libero esse unde a animi alias ratione sequi. Earum suscipit deleniti non minus
+                        voluptatum eaque reprehenderit maxime ratione excepturi quisquam, voluptas reiciendis deserunt
+                        nemo quos eligendi delectus. Quaerat nesciunt est magnam architecto ipsa.
                     </p>
-                    <p class="text-white">
-                        Give us a call on
-                        <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
+                    <p class="text-blue mb-4">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum minus harum aliquam hic
+                        consequatur vitae corrupti at laboriosam natus quasi commodi, obcaecati rem ipsam ratione nobis.
+                        Impedit exercitationem sint doloribus est similique eos hic. Assumenda porro voluptate ea eos
+                        dolor?
                     </p>
+                    <p class="text-blue mb-4">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus illo accusamus dolorem ipsum
+                        optio saepe impedit vel explicabo excepturi ipsa?
+                    </p>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <h2 class="text-blue fw-bolder">Current vacancies</h2>
+                    <div class="vacancie-card mb-4">
+                        <p class="text-blue fw-bolder mb-1">Job title</p>
+                        <p class="text-blue mb-1">30k-40k per annum</p>
+                        <p class="text-blue mb-1">Swindon</p>
+                        <p class="text-blue">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
+                            dolores quibusdam impedit deleniti doloremque
+                        </p>
+                        <button class="btn btn-view-detail bg-light-blue text-uppercase text-white rounded-0">
+                            View details
+                        </button>
+                    </div>
+                    <div class="vacancie-card">
+                        <p class="text-blue fw-bolder mb-1">Job title</p>
+                        <p class="text-blue mb-1">30k-40k per annum</p>
+                        <p class="text-blue mb-1">Swindon</p>
+                        <p class="text-blue">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nihil ullam reprehenderit
+                            dolores quibusdam impedit deleniti doloremque
+                        </p>
+                        <button class="btn btn-view-detail bg-light-blue text-uppercase text-white rounded-0">
+                            View details
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-12 col-lg-4">
+                    <div class="card career-card border-0">
+                        <div class="card-img-top w-100 my-0">
+                            <video class="video my-0" width="100%" height="240" controls>
+                                <source src="movie.mp4" type="video/mp4">
+                                <source src="movie.ogg" type="video/ogg">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
+                            <p class="card-text text-blue">
+                                Developer
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card career-card border-0">
+                        <div class="card-img-top w-100 my-0">
+                            <video class="video my-0" width="100%" height="240" controls>
+                                <source src="movie.mp4" type="video/mp4">
+                                <source src="movie.ogg" type="video/ogg">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
+                            <p class="card-text text-blue">
+                                Developer
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card career-card border-0">
+                        <div class="card-img-top w-100 my-0">
+                            <video class="video my-0" width="100%" controls>
+                                <source src="movie.mp4" type="video/mp4">
+                                <source src="movie.ogg" type="video/ogg">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                        <div class="card-body px-0">
+                            <h5 class="card-title text-blue fw-bolder">John Smith</h5>
+                            <p class="card-text text-blue">
+                                Developer
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Section Contact end -->
+    <!-- Main card section end  -->
 
     <!-- Footer start  -->
     <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4">
                     <h5 class="text-white fw-bold text-uppercase">
@@ -235,7 +242,7 @@
 
     <!-- Section Copyright start -->
     <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
