--- a/whatwedo.html
+++ b/whatwedo.html
@@ -20,9 +20,9 @@
 
 <body>
     <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -36,12 +36,14 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="whatwedo-header">
+    <section class="whatwedo-header px-3">
 
-        <nav class=" navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -58,16 +60,16 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">What we do</p>
@@ -114,7 +116,7 @@
         <div class="container d-none d-lg-block mt-5">
             <div class="row">
                 <div class="col-12 col-md-3">
-                    <div class="card">
+                    <div class="card rounded-0">
                         <img src="./assets/Icon images/Systems_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-blue">
@@ -124,7 +126,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
-                    <div class="card">
+                    <div class="card rounded-0">
                         <img src="./assets/Icon images/Building_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-blue">
@@ -134,7 +136,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
-                    <div class="card">
+                    <div class="card rounded-0">
                         <img src="./assets/Icon images/Move_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-blue">When you need to move your data</h5>
@@ -142,7 +144,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
-                    <div class="card">
+                    <div class="card rounded-0">
                         <img src="./assets/Icon images/Upgrade_icon.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title text-blue">Making your current software good as new</h5>
@@ -153,7 +155,7 @@
         </div>
     </section>
     <section class="bg-light-grey py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-5 d-flex justify-content-center">
                     <img src="./assets/Icon images/Systems_icon.png" alt="system" class="software-icon">
@@ -177,13 +179,15 @@
                     <p class="text-blue mb-3">
                         Plus, it frees up your people to work on more intresting things like the next brilliant idea.
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call">book a call</button>
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                        book a call
+                    </button>
                 </div>
             </div>
         </div>
     </section>
     <section class="py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-5 d-flex justify-content-center">
                     <img src="./assets/Icon images/Building_icon.png" alt="building" class="software-icon">
@@ -202,13 +206,15 @@
                         Our technical development team build bespoke applications that fit your business, and nobody
                         else's
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call">book a call</button>
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                        book a call
+                    </button>
                 </div>
             </div>
         </div>
     </section>
     <section class="bg-light-grey py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-5 d-flex justify-content-center">
                     <img src="./assets/Icon images/Move_icon.png" alt="move" class="software-icon">
@@ -236,13 +242,15 @@
                         </span>
                         as we go.
                     </p>
-                    <button class="btn bg-orange text-white text-uppercase btn-book-call">book a call</button>
+                    <button class="btn bg-orange text-white text-uppercase btn-book-call rounded-0">
+                        book a call
+                    </button>
                 </div>
             </div>
         </div>
     </section>
     <section class="py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-5 d-flex justify-content-center">
                     <img src="./assets/Icon images/Upgrade_icon.png" alt="Upgrade_icon" class="software-icon">
@@ -267,7 +275,9 @@
                         restore peak performance plus deliver software that fits your business like a glove.
                         Adding value and keeping you in the business for another 20 years
                     </p>
-                    <button class="btn d-block bg-orange text-white text-uppercase btn-book-call">book a call</button>
+                    <button class="btn d-block bg-orange text-white text-uppercase btn-book-call rounded-0">
+                        book a call
+                    </button>
                 </div>
             </div>
         </div>
@@ -275,8 +285,8 @@
     <!-- Section details end  -->
 
     <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
-        <div class="container">
+    <section class="section-contact px-3">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-7">
                     <p class="text-blue">
@@ -294,7 +304,7 @@
 
     <!-- Footer start  -->
     <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4">
                     <h5 class="text-white fw-bold text-uppercase">
@@ -339,7 +349,7 @@
 
     <!-- Section Copyright start -->
     <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
