--- a/whyus.html
+++ b/whyus.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
@@ -36,12 +36,14 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="whyus-header">
+    <section class="whyus-header px-3">
 
-        <nav class=" navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -58,16 +60,16 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">Why us</p>
