--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
@@ -20,9 +20,9 @@
 
 <body>
     <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -35,13 +35,16 @@
         </div>
     </div>
 
-    <!-- Section Header start  -->
-    <section class="about-header">
 
-        <nav class="about-header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+    <!-- Section Header start  -->
+    <section class="about-header px-3">
+
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -49,7 +52,8 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase active text-white" aria-current="page" href="#">
+                            <a class="nav-link text-uppercase active text-white" aria-current="page"
+                                href="whatwedo.html">
                                 what we do
                             </a>
                         </li>
@@ -57,16 +61,16 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">Our background</p>
@@ -84,7 +88,7 @@
     <!-- Section Header end  -->
     <!-- Section solution start  -->
     <section class="py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-4 text-left">
                     <h2 class="text-blue fw-bold">
@@ -114,26 +118,28 @@
     </section>
     <!-- Section solutions end  -->
     <!-- Section Review start -->
-    <section class="py-4 py-md-5 px-3 bg-orange">
-        <div class="container">
-            <div class="section-header d-flex align-items-top">
-                <h2 class="ms-md-3 fw-bold text-white">
-                    <span class="left-quote">"</span>
-                    GS ynderstood our challenges
-                    straight away"
-                </h2>
+    <section class="section-review py-4 py-md-5 px-3 bg-orange">
+        <div class="container p-0">
+            <div>
+                <div class="fw-bold text-white d-flex align-items-top">
+                    <h1 class="left-quote align-self-bottom">&#8220;</h1>
+                    <h2 class="section-review-heading ms-md-2 ">
+                        GS ynderstood our challenges
+                        straight away<span class="right-quote">&#8221;</span>
+                    </h2>
+                </div>
             </div>
-            <p class="text-blue fw-normal">
+            <p class="text-blue">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
                 Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
                 deleniti! Lorem ipsum dolor
             <div class="d-flex mb-3">
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
                 <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
             </div>
             <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
@@ -142,14 +148,14 @@
     <!-- Section Review end -->
 
     <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
-        <div class="container">
+    <section class="section-contact px-3">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-7">
-                    <p class="text-blue">
+                    <p class="text-blue fw-bold">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </p>
-                    <p class="text-white">
+                    <p class="text-white fw-normal fw-bold">
                         Give us a call on
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
                     </p>
@@ -161,7 +167,7 @@
 
     <!-- Footer start  -->
     <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4">
                     <h5 class="text-white fw-bold text-uppercase">
@@ -206,7 +212,7 @@
 
     <!-- Section Copyright start -->
     <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
