--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
@@ -20,9 +20,9 @@
 
 <body>
     <div class="d-none d-lg-block container-fluid bg-dark-blue py-2">
-        <div class="page-top container d-flex justify-content-between">
+        <div class="page-top container d-flex justify-content-between align-items-center">
             <p class="mb-0 text-white">The software specialists solving everyday SME problems</p>
-            <div class="page-top-connect d-flex align-items-center">
+            <div class="page-top-social d-flex align-items-center">
                 <a href="#" class="text-decoration-none text-light-blue d-flex align-items-center">
                     <img class="email-icon me-2" src="./assets/Icon images/Email_icon.png " alt="message-icon">
                     info@geidans.co.uk
@@ -36,12 +36,14 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="header">
+    <section class="home-header px-3">
 
         <nav class="header-nav navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -58,16 +60,16 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white" href="#">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white">
             <div class="row">
                 <div class='col-md-6'>
                     <h1 class="header-content-heading fw-bold mb-4">
@@ -81,8 +83,12 @@
                     <h6>Geidans Solutions</h6>
                     <h6>Now You Can.</h6>
                     <div class="mt-4 d-none d-md-block">
-                        <button class="btn with-border text-uppercase text-white fw-bold">our services</button>
-                        <button class="btn text-uppercase bg-orange text-white fw-bold"> talk to us</button>
+                        <button class="btn with-border text-uppercase text-white fw-bolder rounded-0 me-3">
+                            our services
+                        </button>
+                        <button class="btn text-uppercase bg-orange text-white fw-bolder rounded-0">
+                            talk to us
+                        </button>
                     </div>
                 </div>
             </div>
@@ -91,13 +97,13 @@
     <!-- Section Header end  -->
     <!-- Section Problem Solver start  -->
     <section class="py-4 py-md-5 px-3">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
-                <div class="col-12 col-md-4 p-0 text-left">
+                <div class="col-12 col-md-4 text-left">
                     <h2 class="text-blue fw-bold">Problem solvers</h2>
                     <h2 class="text-blue fw-bold">Process fixers</h2>
                 </div>
-                <div class="col-12 col-md-8 p-0">
+                <div class="col-12 col-md-8">
                     <p class="text-orange fw-bold">
                         As a small or medium sized business
                         <br class="d-none d-md-block">
@@ -120,9 +126,12 @@
                         And win
                     </p>
                     <div class="mt-4 d-block d-md-none">
-                        <button class="btn with-border text-uppercase text-blue fw-bold w-100 mb-3">our
-                            services</button>
-                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100"> talk to us</button>
+                        <button class="btn with-border text-uppercase text-blue fw-bold w-100 mb-3 rounded-0">
+                            our services
+                        </button>
+                        <button class="btn text-uppercase bg-orange text-white fw-bold w-100 rounded-0">
+                            talk to us
+                        </button>
                     </div>
                 </div>
             </div>
@@ -130,26 +139,28 @@
     </section>
     <!-- Section Problem Solver end  -->
     <!-- Section Review start -->
-    <section class="py-4 py-md-5 px-3 bg-orange">
-        <div class="container">
-            <div class="section-header d-flex align-items-top">
-                <h2 class="ms-md-3 fw-bold text-white">
-                    <span class="left-quote">"</span>
-                    GS ynderstood our challenges
-                    straight away"
-                </h2>
+    <section class="section-review py-4 py-md-5 px-3 bg-orange">
+        <div class="container p-0">
+            <div>
+                <div class="fw-bold text-white d-flex align-items-top">
+                    <h1 class="left-quote align-self-bottom">&#8220;</h1>
+                    <h2 class="section-review-heading ms-md-2 ">
+                        GS ynderstood our challenges
+                        straight away<span class="right-quote">&#8221;</span>
+                    </h2>
+                </div>
             </div>
-            <p class="text-blue fw-normal">
+            <p class="text-blue">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
                 Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
                 deleniti! Lorem ipsum dolor
             <div class="d-flex mb-3">
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
                 <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
             </div>
             <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
@@ -159,17 +170,18 @@
 
     <!-- Section Why us start  -->
     <section class="py-4 py-md-5 px-3 bg-light-grey">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-4 text-left mb-3 mb-md-0">
-                    <h2 class="text-blue fw-bold">Think Smarter.</h2>
-                    <h2 class="text-blue fw-bold">Grow Faster.</h2>
-                    <h2 class="text-blue fw-bold">Compete Harder.</h2>
+                    <h2 class="text-blue fw-bolder fw-md-bold">Think Smarter.</h2>
+                    <h2 class="text-blue fw-bolder fw-md-bold">Grow Faster.</h2>
+                    <h2 class="text-blue fw-bolder fw-md-bold">Compete Harder.</h2>
                 </div>
                 <div class="col-12 col-md-8">
-                    <h4 class="text-dark fw-bolder">
-                        Why Us
+                    <h4 class="text-dark fw-bolder d-none d-lg-block">
+                        Why Us?
                     </h4>
+                    <p class="text-orange d-block d-lg-none fw-bolder mb-1">Why us?</p>
                     <p class="text-blue mb-0">
                         We believe if you control your processes, you control your business.
                     </p>
@@ -195,7 +207,7 @@
     <!-- Section Geidans-help start -->
     <section class="section-help py-3 py-md-5 px-4">
         <h2 class="text-orange text-center fw-bold mb-4 mb-md-5">How we can help</h2>
-        <div class="container">
+        <div class="container p-0">
             <div class="row mb-4 mb-md-5">
                 <div class="col-lg-9 mx-auto d-flex flex-column align-items-center flex-md-row">
                     <img class="me-0 me-md-5" src="./assets/Icon images/Systems_icon.png" alt="systems-icon">
@@ -255,7 +267,7 @@
 
     <!-- Section Solutions start  -->
     <section class="py-4 py-md-5 px-3 section-solution">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-12 col-md-4 d-flex flex-row flex-md-column justify-content-between">
                     <h3 class="text-orange">Dynamic</h3>
@@ -263,12 +275,12 @@
                     <h3 class="text-orange">Fast</h3>
                 </div>
                 <div class="col-12 col-md-8">
-                    <p class="fw-bold text-white">
+                    <p class="fw-lg-bolder text-white">
                         At Geidans Solutions, we have over 20
                         years' experience in soling the process issues that holdmany systemsb
                         back from achieving real growth
                     </p>
-                    <p class="fw-bold text-white">
+                    <p class="fw-lg-bolder text-white">
                         SME owners are can-do, make-it-happen people.
                         <span class="text-orange">So are we</span>
                     </p>
@@ -279,11 +291,11 @@
     <!-- Section Solutions end -->
 
     <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
-        <div class="container">
+    <section class="section-contact px-3">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-7">
-                    <p class="text-blue">
+                    <p class="text-blue fw-bolder">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </p>
                     <p class="text-white">
@@ -298,10 +310,10 @@
 
     <!-- Footer start  -->
     <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase">
                         get in touch
                     </h5>
                     <a href="#" class="text-white text-decoration-none d-block mb-2">
@@ -317,7 +329,7 @@
                     <p class="text-white mb-0">Address line 3</p>
                 </div>
                 <div class="col-lg-4 d-none d-lg-block ">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase">
                         link column here
                     </h5>
                     <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
@@ -326,7 +338,7 @@
                     <a href="#" class="text-decoration-none text-white d-block mb-2">Link 1</a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <h5 class="text-white fw-bold text-uppercase">
+                    <h5 class="text-white fw-bolder text-uppercase mt-4 mt-md-0">
                         services
                     </h5>
                     <a href="#" class="text-decoration-none text-white d-block mb-0 mb-lg-2">Systems integration</a>
@@ -343,7 +355,7 @@
 
     <!-- Section Copyright start -->
     <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
