--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Numans&family=Quicksand:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Geidans Solutions</title>
@@ -36,12 +36,14 @@
     </div>
 
     <!-- Section Header start  -->
-    <section class="team-header">
+    <section class="team-header px-0">
 
-        <nav class=" navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="home.html">Geidans Solutions</a>
-                <button class="navbar-toggler text-white border-0" type="button" data-bs-toggle="collapse"
+        <nav class="header-nav navbar navbar-expand-lg navbar-dark">
+            <div class="container p-0">
+                <a class="navbar-brand" href="home.html">
+                    <img src="./assets/GS_logo_Colour_for_blue_background.png" alt="logo" class="logo">
+                </a>
+                <button class="navbar-toggler text-white border-0 px-1" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon "></span>
@@ -58,16 +60,16 @@
                             <a class="nav-link text-uppercase text-white" href="about.html">about us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">careers</a>
+                            <a class="nav-link text-uppercase text-white" href="career.html">careers</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-uppercase text-white">concact</a>
+                            <a class="nav-link text-uppercase text-white" href="contact.html">contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="header-content container text-white px-3">
+        <div class="header-content container text-white px-0">
             <div class="row">
                 <div class='col-md-6'>
                     <p class="text-white fw-bold">Senior team</p>
@@ -143,26 +145,28 @@
     </section>
     <!-- Section Team end  -->
     <!-- Section Review start -->
-    <section class="py-4 py-md-5 px-3 bg-orange">
-        <div class="container">
-            <div class="section-header d-flex align-items-top">
-                <h2 class="ms-md-3 fw-bold text-white">
-                    <span class="left-quote">"</span>
-                    GS ynderstood our challenges
-                    straight away"
-                </h2>
+    <section class="section-review py-4 py-md-5 px-3 bg-orange">
+        <div class="container p-0">
+            <div>
+                <div class="fw-bold text-white d-flex align-items-top">
+                    <h1 class="left-quote align-self-bottom">&#8220;</h1>
+                    <h2 class="section-review-heading ms-md-2 ">
+                        GS ynderstood our challenges
+                        straight away<span class="right-quote">&#8221;</span>
+                    </h2>
+                </div>
             </div>
-            <p class="text-blue fw-normal">
+            <p class="text-blue">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ducimus eos ipsum tenetur enim ut
                 excepturi accusamus veritatis dignissimos unde cupiditate eum, neque autem nisi nam velit blanditiis
                 similique voluptatem soluta. Mollitia atque tenetur temporibus provident numquam perspiciatis sit?
                 Optio magnam dolorem aut odit nulla voluptatum eligendi voluptates ea hic, molestias, nemo error
                 deleniti! Lorem ipsum dolor
             <div class="d-flex mb-3">
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
-                <span class="star-icon text-white me-2"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
+                <span class="star-icon text-white me-2 me-md-4"><i class="fas fa-star"></i></span>
                 <span class="star-icon text-white"><i class="fas fa-star-half"></i></span>
             </div>
             <p class="text-white fw-bolder"> 4.5 on Google reviews</p>
@@ -171,14 +175,14 @@
     <!-- Section Review end -->
 
     <!-- Section Contact start -->
-    <section class="section-contact py-4 py-md-5 px-3">
-        <div class="container">
+    <section class="section-contact px-3">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-7">
-                    <p class="text-blue">
+                    <p class="text-blue fw-bold">
                         Want to work better, grow faster and compete on a bigger playing field?
                     </p>
-                    <p class="text-white">
+                    <p class="text-white fw-normal fw-bold">
                         Give us a call on
                         <span class="text-blue d-block d-md-inline-block">+44 (0) 3333 444 151</span>
                     </p>
@@ -190,7 +194,7 @@
 
     <!-- Footer start  -->
     <footer class="footer bg-blue py-4 px-3 px-lg-0">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-6 col-lg-4 mb-4">
                     <h5 class="text-white fw-bold text-uppercase">
@@ -235,7 +239,7 @@
 
     <!-- Section Copyright start -->
     <div class="footer-copyright p-3 px-md-0  bg-dark-blue">
-        <div class="container">
+        <div class="container p-0">
             <div class="row">
                 <div class="col-md-9 mx-auto">
                     <div class="d-flex flex-column align-items-center flex-md-row justify-content-between">
